website/versioned_docs/version-2.0.0-alpha.11/web.authcontainer.md
---
id: version-2.0.0-alpha.11-web.authcontainer
title: AuthContainer class
hide_title: true
original_id: web.authcontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## AuthContainer class


<b>Signature:</b>

```typescript
export declare class AuthContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./web.authcontainer._constructor_.md) |  | Constructs a new instance of the <code>AuthContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [currentIdentity](./web.authcontainer.currentidentity.md) |  | <code>Identity &#124; null</code> |  |
|  [currentSessionID](./web.authcontainer.currentsessionid.md) |  | <code>string &#124; null</code> |  |
|  [currentUser](./web.authcontainer.currentuser.md) |  | <code>User &#124; null</code> |  |
|  [extraSessionInfoOptions](./web.authcontainer.extrasessioninfooptions.md) |  | <code>ExtraSessionInfoOptions</code> |  |
|  [parent](./web.authcontainer.parent.md) |  | <code>Container&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [changePassword(newPassword, oldPassword)](./web.authcontainer.changepassword.md) |  |  |
|  [deleteOAuthProvider(providerID)](./web.authcontainer.deleteoauthprovider.md) |  |  |
|  [getSession(id)](./web.authcontainer.getsession.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./web.authcontainer.linkoauthproviderwithaccesstoken.md) |  |  |
|  [listSessions()](./web.authcontainer.listsessions.md) |  |  |
|  [login(loginID, password, options)](./web.authcontainer.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./web.authcontainer.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./web.authcontainer.loginwithcustomtoken.md) |  |  |
|  [logout()](./web.authcontainer.logout.md) |  |  |
|  [me()](./web.authcontainer.me.md) |  |  |
|  [persistResponse(response)](./web.authcontainer.persistresponse.md) |  |  |
|  [requestEmailVerification(email)](./web.authcontainer.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./web.authcontainer.requestforgotpasswordemail.md) |  |  |
|  [resetPassword(form)](./web.authcontainer.resetpassword.md) |  |  |
|  [revokeOtherSessions()](./web.authcontainer.revokeothersessions.md) |  |  |
|  [revokeSession(id)](./web.authcontainer.revokesession.md) |  |  |
|  [saveExtraSessionInfoOptions()](./web.authcontainer.saveextrasessioninfooptions.md) |  |  |
|  [signup(loginIDs, password, options)](./web.authcontainer.signup.md) |  |  |
|  [signupWithEmail(email, password, options)](./web.authcontainer.signupwithemail.md) |  | signupWithEmail is a shorthand of [the signup() method](./web.authcontainer.signup.md)<!-- -->. |
|  [signupWithUsername(username, password, options)](./web.authcontainer.signupwithusername.md) |  | signupWithUsername is a shorthand of [the signup() method](./web.authcontainer.signup.md)<!-- -->. |
|  [updateMetadata(metadata)](./web.authcontainer.updatemetadata.md) |  |  |
|  [updateSession(id, patch)](./web.authcontainer.updatesession.md) |  |  |
|  [verifyWithCode(code)](./web.authcontainer.verifywithcode.md) |  |  |

